MD History: Add tooltip for history menu button

Add tooltip for toolbar menu button in MD history, and MD settings which also use
<cr-toolbar>.

BUG=633556
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2235803003
Cr-Commit-Position: refs/heads/master@{#413042}

Former-commit-id: 874ed7b5e521c6cf2687b7f12dc09c44f48f206a